--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde_json = "1.0.108"
 dotenv = "0.15.0"
 tokio = {version="1.39.2", features = ["full"]}
 futures = "0.3.29"
+rayon = "1.10.0"
+libc = "0.2.155"
